--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "url": "git+https://github.com/rebase-inc/profile-js.git"
   },
   "dependencies": {
-    "ast-types": "^0.9.0",
-    "esprima": "^2.7.3"
+    "babel-core": "^6.14.0",
+    "babel-preset-latest": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-traverse": "^6.15.0",
+    "babel-types": "^6.15.0"
   },
   "devDependencies": {},
   "main": "server.js",
