--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-traverse": "^6.15.0",
     "babel-types": "^6.15.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "winston": "^2.3.0",
+    "winston-rsyslog2": "0.0.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "should": "^11.1.2"
+  },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "bugs": {
     "url": "https://github.com/rebase-inc/profile-js/issues"
